[package]
name = "security"
version = "0.1.0"
edition = "2021"

# enabling the "derive" feature is necessary in order to derive from stuff in the rs file
[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
futures = "0.3.31"
pcap = "2.2.0"
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["full"] }
trust-dns-resolver = "0.23.2"
whois-rust = "1.6.0"
